@@ -1,3 +1,8 @@
+2012-10-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-edit.el: Use mapc instead of mapcar for side effect.
+	Assume emacs-major-version is greater than 18.
+
 2012-10-06  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-pgp.el (mime-verify-application/*-signature)
